# connect-rust-boilerplate

./: README.md  cargo-generate.toml
.devcontainer/: Dockerfile  devcontainer.json
templates/buf-generate/: .dockerignore  Cargo.toml  Dockerfile  README.md  buf.gen.yaml
templates/buf-generate/.devcontainer/: Dockerfile  devcontainer.json
templates/buf-generate/src/: client.rs  server.rs
templates/build-rs/: Cargo.toml  Dockerfile  README.md  build.rs
templates/build-rs/.devcontainer/: Dockerfile  devcontainer.json
templates/build-rs/proto/: {{proto_name}}.proto
templates/build-rs/src/: client.rs  server.rs
