[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["Conrad Taylor <conradwt@gmail.com>"]
license = "MIT"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
axum = "0.8.9"
buffa = "0.8.1"
connectrpc = { version = "0.8.1", features = ["axum", "client", "server"] }
futures = "0.3.32"
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
