[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
connectrpc = { version = "0.8.1", features = ["axum", "client", "server"] }
buffa = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
http = "1.4.2"
futures = "0.3.32"

[build-dependencies]
connectrpc-build = "0.8.0"
